--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^9.1.1",
     "@types/three": "^0.175.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.10.5",
     "gsap": "^3.12.7",
     "next": "15.2.4",
     "react": "^19.0.0",
